# ksim_zeroth

./: .gitignore  MJDATA.TXT  README.md  pyproject.toml  template.slurm  train wIMU_copy.py  train.py  train_copy.py  train_standup.py  train_with_progress.py  view_robot.py
meshes/: robot.mjcf
slurm_outputs/slurm_outputs/: train_error_23216245.txt  train_output_23216245.txt
