[project]
name = ""
version = "0.0.1"
dependencies = [
    "ksim==0.2.10",
    "xax==0.4.4",
    "distrax==0.1.7",
    "equinox==0.13.2",
    "attrs==25.4.0",
    "mujoco==3.3.7",
    "mujoco-mjx==3.3.7",
    "mujoco-scenes==0.0.17",
    "protobuf<4",
    "kinfer[jax]",
    "jax[cuda12]>=0.8.0",
    "warp-lang>=1.9.1",
]

[tool.pytest.ini_options]

addopts = "-rx -rf -x -q --full-trace"
testpaths = ["tests"]

markers = [
    "slow: Marks test as being slow",
]

[tool.mypy]

pretty = true
show_column_numbers = true
show_error_context = true
show_error_codes = true
show_traceback = true
disallow_untyped_defs = true
strict_equality = true
allow_redefinition = true

warn_unused_ignores = true
warn_redundant_casts = true

incremental = true
namespace_packages = false

[tool.uv]
package = false

[[tool.mypy.overrides]]

module = [
    "_pytest.*",
    "distrax.*",
    "equinox.*",
    "glfw.*",
    "mujoco.*",
    "optax.*",
    "scipy.*",
    "bvhio.*",
    "glm.*",
    "imageio.*",
    "tensorflow.*"
]
ignore_missing_imports = true

[tool.isort]

profile = "black"

[tool.ruff]

line-length = 120
target-version = "py310"

[tool.ruff.format]

quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]

select = ["ANN", "D", "E", "F", "G", "I", "N", "PGH", "PLC", "PLE", "PLR", "PLW", "W"]

ignore = [
    "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "N812", "N817",
    "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004",
    "PLW0603", "PLW2901",
]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]

"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]

known-first-party = ["benchmark", "tests"]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]

convention = "google"
